feat: Update hero-clients-section with all clients and smaller logos
- Added all 21 company clients to hero-clients-section in both English and Spanish
- Reduced logo sizes from max-height: 45px to 35px (22% reduction)
- Reduced max-width from 90% to 85%
- Reduced container min-height from 60px to 50px
- Reduced gap spacing for more compact display
- Added clients: Julian, Luz Valle, Pilahuin Tio, Banco Austro, Commonwealth,
  CACPELOJA, Cooperco, Cuatro Ríos, Finander, Fininvest, Gualaquiza,
  Sierra Centro, Vazcredit, Banco Comercio, RIB, IGB
- Scroll functionality already configured in CSS (max-height: 600px, overflow-y: auto)

--- a/es/index.html
+++ b/es/index.html
@@ -98,24 +98,69 @@
             <!-- Clients Section - Side by Side -->
             <div class="hero-clients-section">
                 <h3 style="color: var(--brand-accent); margin-bottom: var(--spacing-md); font-size: 1.3rem; text-align: center;">Confianza de 42+ Instituciones</h3>
-                <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: var(--spacing-md); margin-bottom: var(--spacing-md);">
-                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
-                        <img src="../assets/logos/jep.png" alt="JEP" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: var(--spacing-sm); margin-bottom: var(--spacing-md);">
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/jep.png" alt="JEP" style="max-width: 85%; max-height: 35px; object-fit: contain;">
                     </div>
-                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
-                        <img src="../assets/logos/mushuc_runa.png" alt="Mushuc Runa" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/mushuc_runa.png" alt="Mushuc Runa" style="max-width: 85%; max-height: 35px; object-fit: contain;">
                     </div>
-                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
-                        <img src="../assets/logos/atuntaqui.png" alt="Atuntaqui" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/atuntaqui.png" alt="Atuntaqui" style="max-width: 85%; max-height: 35px; object-fit: contain;">
                     </div>
-                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
-                        <img src="../assets/logos/cooperativa_la_dolorosa.svg" alt="La Dolorosa" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/julian.png" alt="Cooperativa Padre Julián Lorente" style="max-width: 85%; max-height: 35px; object-fit: contain;">
                     </div>
-                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
-                        <img src="../assets/logos/visandes.png" alt="Visandes" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/visandes.png" alt="Visandes" style="max-width: 85%; max-height: 35px; object-fit: contain;">
                     </div>
-                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-sm); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 60px;">
-                        <img src="../assets/logos/igb_bank.png" alt="IGB Bank" style="max-width: 90%; max-height: 45px; object-fit: contain;">
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/igb_bank.png" alt="IGB Bank" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/luz_valle.png" alt="Cooperativa Luz del Valle" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/pilahuin_tio.png" alt="Cooperativa Pilahuín Tío" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/bancoAustro.png" alt="Banco del Austro" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/commonwealth.png" alt="Commonwealth Bank" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/cacpeloja.png" alt="CACPELOJA" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/cooperco.png" alt="Cooperco" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/cuatrorios.png" alt="Cuatro Ríos" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/finander.png" alt="Finander" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/fininvest.png" alt="Fininvest" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/gualaquiza.png" alt="Gualaquiza" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/sierracentro.png" alt="Sierra Centro" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/vazcredit.png" alt="Vazcredit" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/bancocomercio.png" alt="Banco del Comercio" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/rib.png" alt="RIB" style="max-width: 85%; max-height: 35px; object-fit: contain;">
+                    </div>
+                    <div style="background: rgba(255, 255, 255, 0.95); padding: var(--spacing-xs); border-radius: 8px; display: flex; align-items: center; justify-content: center; min-height: 50px;">
+                        <img src="../assets/logos/igb.png" alt="IGB" style="max-width: 85%; max-height: 35px; object-fit: contain;">
                     </div>
                 </div>
                 <div style="text-align: center; padding: var(--spacing-md); background: rgba(0, 147, 234, 0.1); border-radius: 8px; border: 1px solid rgba(0, 147, 234, 0.3);">
